welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Int
    for (i <- 1 to nbPas) {
           ^Program:7: error: type mismatch;
 found   : Unit
 required: Int
  if (versLAvant == false) {
  ^Program:3: error: type mismatch;
 found   : Unit
 required: Int
  if (versLAvant == true) {
  ^