welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant: Boolean): Int = {
  if (versLAvant == true) {
    for (i <- 1 to nbPas) {
      avance();
  }
  if (versLAvant == false) {
    for (i <- 1 to nbPas) {
      recule();
   }
  }
 }
}